nav y hero banner header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <html lang="zxx">
 
 <head>
-    <title>Casita A Real Estate Category Bootstrap responsive Web Template | Home :: w3layouts</title>
+    <title>Genesys Informatica</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="keywords" content="Casita a Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -40,7 +40,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="container">
                 <header class="mainheader py-3">
                     <nav class="navbar navbar-expand-lg navbar-light bg-light RWDpagescrollfix">
-                        <h1><a class="navbar-brand" href="index.html">Casita</a></h1>
+                        <!-- <h1><a class="navbar-brand" href="index.html">Casita</a></h1> -->
+                        <a href="index.html">
+                            <img src="./images/Logotipo Genesys Horizontal.png" alt="Logo Genesys Informatica" height="55">
+                        </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-toggle" aria-controls="navbarNavAltMarkup"
                             aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
@@ -49,9 +52,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <ul class="navbar-nav">
 
                                 <li class="nav-item active">
-                                    <a class="nav-link text-uppercase" href="index.html">Home</a></li>
-                                <li><a class="nav-link text-uppercase" href="about.html">About</a></li>
-                                <li class="nav-item dropdown">
+                                    <a class="nav-link text-uppercase" href="index.html">Home</a>
+                                </li>
+                                <li><a class="nav-link text-uppercase" href="about.html">Hardware</a></li>
+                                <li><a class="nav-link text-uppercase" href="about.html">Software</a></li>
+                                <li><a class="nav-link text-uppercase" href="about.html">Servicios</a></li>
+                                <li><a class="nav-link text-uppercase" href="about.html">Impresion</a></li>
+                                <li><a class="nav-link text-uppercase" href="about.html">Nosotros</a></li>
+                                <!-- <li class="nav-item dropdown">
                                     <a class="nav-link text-uppercase dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                                         aria-expanded="false">
                                         Pages <i class="fas fa-caret-down"></i>
@@ -60,16 +68,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                         <a class="dropdown-item" href="services.html">Services</a>
                                         <a class="dropdown-item" href="gallery.html" title="">Gallery</a>
                                     </div>
-                                </li>
-                                <li> <a class="nav-link text-uppercase" href="contact.html">Contact</a></li>
+                                </li> -->
+                                <li> <a class="nav-link text-uppercase" href="contact.html">Contacto</a></li>
                             </ul>
-                            <div class="top-info text-left">
+                            <!-- <div class="top-info text-left">
                                 <ul>
 
                                     <li class="number-phone"><a class="nav-link request text-uppercase font-weight-bold"
                                             href="#" data-toggle="modal" data-target="#exampleModalCenter">Login</a></li>
                                 </ul>
-                            </div>
+                            </div> -->
                         </div>
                     </nav>
                 </header>
@@ -78,8 +86,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
             <!-- /banner-info-->
             <div class="banner-content text-center text-white">
-                <h4 class="text-uppercase"> More than 650.000 Houses Available</h4>
-                <h3>Find a Home to Suit Your Lifestyle</h3>
+                <h4 class="text-uppercase">IntelligencEvolved</h4>
+                <h3>Experiencia en Soluciones Tecnologicas</h3>
 
                 <div class="banner-high-lights text-center">
                     <div class="rotate">
@@ -396,7 +404,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <h3 class="tittle1 foot mb-md-5 mb-4 text-white">About Us</h3>
                         <p>Curabitur non nulla sit amet nislinit tempus convallis quis ac lectus. lac inia eget consectetur
                             sed, convallis at tellus. Nulla porttitor accumsana tincidunt. Vestibulum ante ipsum primis tempus
-                            convallis.</p>
+                            convallis.
+                        </p>
 
                     </div>
                     <div class="col-lg-6 col-md-12 n-right tex-left">
@@ -450,7 +459,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <label class="mb-2">Email address</label>
                                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="" required="">
                                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                                    else.</small>
+                                    else.
+                                </small>
                             </div>
                             <div class="form-group">
                                 <label class="mb-2">Password</label>
