--- a/index.html
+++ b/index.html
@@ -355,29 +355,29 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="col-sm-3 col-6 stats_info counter_grid">
 
                     <i class="fas fa-briefcase"></i>
-                    <p class="counter">16</p>
-                    <h4>Years of Experience</h4>
+                    <p class="counter">18</p>
+                    <h4>Años de Experiencia</h4>
 
                 </div>
                 <div class="col-sm-3 col-6 stats_info counter_grid1">
 
                     <i class="fas fa-users"></i>
-                    <p class="counter">230</p>
-                    <h4>Real Estate Agents</h4>
+                    <p class="counter">48</p>
+                    <h4>Personal Capacitado</h4>
 
                 </div>
                 <div class="col-sm-3 col-6 stats_info counter_grid">
 
-                    <i class="fas fa-dollar-sign"></i>
-                    <p class="counter">110</p>
-                    <h4>Sold Daily</h4>
+                    <i class="fas fa-handshake"></i>
+                    <p class="counter">2321</p>
+                    <h4>Proyectos Exitosos</h4>
 
                 </div>
                 <div class="col-sm-3 col-6 stats_info counter_grid2">
 
                     <i class="far fa-smile"></i>
-                    <p class="counter">1045</p>
-                    <h4>Clients</h4>
+                    <p class="counter">789</p>
+                    <h4>Clientes</h4>
 
                 </div>
             </div>
@@ -421,7 +421,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
         </div>
     </footer>
-    <div class="copyright py-3">
+    <!-- <div class="copyright py-3">
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
@@ -439,11 +439,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!--//newsletter-->
     <!--model-forms-->
     <!--/Login-->
-    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-hidden="true">
+    <!-- <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header text-center">
@@ -479,10 +479,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!--//Login-->
     <!--/Register-->
-    <div class="modal fade" id="exampleModalCenter2" tabindex="-1" role="dialog" aria-hidden="true">
+    <!-- <div class="modal fade" id="exampleModalCenter2" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header text-center">
@@ -524,7 +524,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
             </div>
         </div>
-    </div>
+    </div> -->
     <!--//Register-->
 
     <!--//model-form-->
@@ -601,7 +601,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- //dropdown nav -->
 
     <!-- password-script -->
-    <script>
+    <!-- <script>
         window.onload = function () {
             document.getElementById("password1").onchange = validatePassword;
             document.getElementById("password2").onchange = validatePassword;
@@ -617,7 +617,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             //empty string means no validation error
         }
 
-    </script>
+    </script> -->
     <!-- //password-script -->
 
     <!--/ start-smoth-scrolling -->
