imagenes de paralax y ventajas

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                     <div class="col-lg-6 advantage-grid-info1">
                         <div class="advantage_left1 text-center">
-                            <img src="images/h1.jpg" class="img-fluid" alt="">
+                            <img src="images/bandwidth-close-up-computer-1148820.jpg" class="img-fluid" alt="">
                         </div>
                     </div>
                 </div>
@@ -133,7 +133,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                     <div class="col-lg-6 advantage-grid-info1">
                         <div class="advantage_left1 text-center">
-                            <img src="images/h2.jpg" class="img-fluid" alt="">
+                            <img src="images/fancycrave-530802-unsplash.jpg" class="img-fluid" alt="">
                         </div>
                     </div>
                     <div class="col-lg-6 advantage-grid-info pt-md-5">
@@ -158,7 +158,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                     <div class="col-lg-6 advantage-grid-info1">
                         <div class="advantage_left1 text-center">
-                            <img src="images/h3.jpg" class="img-fluid" alt="">
+                            <img src="images/collaboration-community-cooperation-872955.jpg" class="img-fluid" alt="">
                         </div>
                     </div>
                 </div>
