--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <!-- <input class="form-control" type="email" name="_replyto "> -->
                             </div>
                             <div class="form-group d-block">
-                                <textarea class="form-control" name="message" placeholder="Texto"></textarea>
+                                <textarea class="form-control" name="message" placeholder="Texto" rows="4"></textarea>
                             </div>
                             <div class="form-group d-flex">
                                 <!-- <input type="submit " value="Send "> -->
