--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         </form> -->
                         <form action="https://formspree.io/alex.gtz17@gmail.com" method="POST">
                             <div class="form-group d-flex">
-                                <input class="form-control" type="text" name="email" placeholder="Correo Electronico">
+                                <input class="form-control form-group-email" type="text" name="email" placeholder="Correo Electronico">
                                 <input class="form-control" type="text" name="name" placeholder="Nombre">
                                 <!-- <input class="form-control" type="email" name="_replyto "> -->
                             </div>
