--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </li>
                 <li><a class="nav-link text-uppercase" href="about.html">Hardware</a></li>
                 <li><a class="nav-link text-uppercase" href="about.html">Software</a></li>
-                <li><a class="nav-link text-uppercase" href="about.html">Servicios</a></li>
+                <!-- <li class="nav-item dropdown">
+                  <a class="nav-link text-uppercase dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Servicios <i class="fas fa-caret-down"></i>
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="services.html">VMware</a>
+                    <a class="dropdown-item" href="gallery.html" title="">AIX</a>
+                  </div>
+                </li> -->
+                <li><a class="nav-link text-uppercase" href="servicios.html">Servicios</a></li>
                 <li><a class="nav-link text-uppercase" href="about.html">Impresion</a></li>
                 <li><a class="nav-link text-uppercase" href="about.html">Nosotros</a></li>
-                <!-- <li class="nav-item dropdown">
-                    <a class="nav-link text-uppercase dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">
-                        Pages <i class="fas fa-caret-down"></i>
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="services.html">Services</a>
-                        <a class="dropdown-item" href="gallery.html" title="">Gallery</a>
-                    </div>
-                </li> -->
                 <li> <a class="nav-link text-uppercase" href="contact.html">Contacto</a></li>
               </ul>
               <!-- <div class="top-info text-left">
