--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <li><a class="nav-link text-uppercase" href="index.html">Home</a></li>
                 <li><a class="nav-link text-uppercase" href="about.html">Hardware</a></li>
                 <li><a class="nav-link text-uppercase" href="about.html">Software</a></li>
-                <li><a class="nav-link text-uppercase" href="about.html">Servicios</a></li>
+                <li><a class="nav-link text-uppercase" href="servicios.html">Servicios</a></li>
                 <li><a class="nav-link text-uppercase" href="about.html">Impresion</a></li>
                 <li><a class="nav-link text-uppercase" href="about.html">Nosotros</a></li>
                 <!-- <li class="nav-item dropdown">
