--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 <html lang="zxx">
 
 <head>
-  <title>Genesys Informatica || Contacto</title>
+  <title>Genesys Informatica | Contacto</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <meta name="keywords" content="Casita a Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
