--- a/servicios.html
+++ b/servicios.html
@@ -8,7 +8,7 @@
 <html lang="zxx">
 
 <head>
-  <title>Casita A Real Estate Category Bootstrap responsive Web Template | Services :: w3layouts</title>
+  <title>Genesys Informatica | Servicios</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <meta name="keywords" content="Casita a Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -23,6 +23,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     }
 
   </script>
+  <link rel="icon" href="./images/Logotipo Genesys Solo Abaco.png">
   <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
   <link href="css/style.css" rel='stylesheet' type='text/css' />
   <link href="css/fontawesome-all.css" rel="stylesheet">
