moved images to google cloud account

--- a/index.html
+++ b/index.html
@@ -125,14 +125,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           </div>
           <div class="col-lg-6 advantage-grid-info1">
             <div class="advantage_left1 text-center">
-              <img src="images/bandwidth-close-up-computer-1148820.jpg" class="img-fluid" alt="">
+              <img src="https://lh3.googleusercontent.com/7Da9Nqq2DiNDxFaf1bKMZdm_etIHS5dD5x4_MHr30PoD5yzummWPjXrE8c378MYBEEKJSOUF5i1oNQ8rT8TgoEHzoWXNvu6VGlZGlNTmLCHGqFzEJecVQaEDoA4rIS-SY-x4G4Pex2E=w2400"
+                class="img-fluid" alt="">
             </div>
           </div>
         </div>
         <div class="row middle-grids pt-lg-5">
           <div class="col-lg-6 advantage-grid-info1">
             <div class="advantage_left1 text-center">
-              <img src="images/fancycrave-530802-unsplash.jpg" class="img-fluid" alt="">
+              <img src="https://lh3.googleusercontent.com/bbTburOHq6UDr24vxkubXHZowuMrlmqqOntPtVIyUmUlqTIouGpjCgev2K_vkV9s-jmd_Uevim5iAQoQr-LiNLnvcW1vVS2FJ9pzUpayOlG4ebtK9eA9Iq6f4W1zgXiGxd8YIKY0FTw=w2400"
+                class="img-fluid" alt="">
             </div>
           </div>
           <div class="col-lg-6 advantage-grid-info pt-md-5">
@@ -157,7 +159,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           </div>
           <div class="col-lg-6 advantage-grid-info1">
             <div class="advantage_left1 text-center">
-              <img src="images/collaboration-community-cooperation-872955.jpg" class="img-fluid" alt="">
+              <img src="https://lh3.googleusercontent.com/4ouNKpoIm7HDXg_eoXglKJTe-_55uZ-ObcLteFCB6ueApzj2f0-u_yMEQzJFXMb4CPVV1vCC4vhqBBnuHWcnUbbkCeQmj3nbmUWUTuvsfNx_YwPk1nbPGxG4YDaiTrK0l9__Klobt9M=w2400"
+                class="img-fluid" alt="">
             </div>
           </div>
         </div>
