hardware container html

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   <link rel="icon" href="./images/Logotipo Genesys Solo Abaco.png">
   <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
   <link href="css/style.css" rel='stylesheet' type='text/css' />
+  <link href="css/contact.css" rel='stylesheet' type='text/css' />
   <link rel="stylesheet" href="css/owl.theme.css" type="text/css" media="all">
   <link rel="stylesheet" href="css/owl.carousel.css" type="text/css" media="screen" property="" />
   <link href="css/fontawesome-all.css" rel="stylesheet">
@@ -54,7 +55,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <li class="nav-item active">
                   <a class="nav-link text-uppercase" href="index.html">Home</a>
                 </li>
-                <li><a class="nav-link text-uppercase" href="about.html">Hardware</a></li>
+                <li><a class="nav-link text-uppercase" href="hardware.html">Hardware</a></li>
                 <li><a class="nav-link text-uppercase" href="about.html">Software</a></li>
                 <!-- <li class="nav-item dropdown">
                   <a class="nav-link text-uppercase dropdown-toggle" href="#" id="navbarDropdown" role="button"
