--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <li class="nav-item">
                   <a class="nav-link text-uppercase" href="index.html">Home</a>
                 </li>
-                <li><a class="nav-link text-uppercase" href="about.html">Hardware</a></li>
+                <li><a class="nav-link text-uppercase" href="hardware.html">Hardware</a></li>
                 <li><a class="nav-link text-uppercase" href="about.html">Software</a></li>
                 <!-- <li class="nav-item dropdown">
                   <a class="nav-link text-uppercase dropdown-toggle" href="#" id="navbarDropdown" role="button"
