--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <ul class="navbar-nav">
 
                 <li><a class="nav-link text-uppercase" href="index.html">Home</a></li>
-                <li><a class="nav-link text-uppercase" href="about.html">Hardware</a></li>
+                <li><a class="nav-link text-uppercase" href="hardware.html">Hardware</a></li>
                 <li><a class="nav-link text-uppercase" href="about.html">Software</a></li>
                 <li><a class="nav-link text-uppercase" href="servicios.html">Servicios</a></li>
                 <li><a class="nav-link text-uppercase" href="about.html">Impresion</a></li>
