software.html container

--- a/hardware.html
+++ b/hardware.html
@@ -51,7 +51,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                 <li><a class="nav-link text-uppercase" href="index.html">Home</a></li>
                 <li class="nav-item active"><a class="nav-link text-uppercase" href="hardware.html">Hardware</a></li>
-                <li><a class="nav-link text-uppercase" href="about.html">Software</a></li>
+                <li><a class="nav-link text-uppercase" href="software.html">Software</a></li>
                 <li><a class="nav-link text-uppercase" href="servicios.html">Servicios</a></li>
                 <li><a class="nav-link text-uppercase" href="about.html">Impresion</a></li>
                 <li><a class="nav-link text-uppercase" href="about.html">Nosotros</a></li>
