--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   <a class="nav-link text-uppercase" href="index.html">Home</a>
                 </li>
                 <li><a class="nav-link text-uppercase" href="hardware.html">Hardware</a></li>
-                <li><a class="nav-link text-uppercase" href="about.html">Software</a></li>
+                <li><a class="nav-link text-uppercase" href="software.html">Software</a></li>
                 <!-- <li class="nav-item dropdown">
                   <a class="nav-link text-uppercase dropdown-toggle" href="#" id="navbarDropdown" role="button"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
