--- a/servicios.html
+++ b/servicios.html
@@ -51,8 +51,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                 <li><a class="nav-link text-uppercase" href="index.html">Home</a></li>
                 <li><a class="nav-link text-uppercase" href="hardware.html">Hardware</a></li>
-                <li><a class="nav-link text-uppercase" href="about.html">Software</a></li>
-                <li><a class="nav-link text-uppercase" href="servicios.html">Servicios</a></li>
+                <li><a class="nav-link text-uppercase" href="software.html">Software</a></li>
+                <li class="nav-item active"><a class="nav-link text-uppercase" href="servicios.html">Servicios</a></li>
                 <li><a class="nav-link text-uppercase" href="about.html">Impresion</a></li>
                 <li><a class="nav-link text-uppercase" href="about.html">Nosotros</a></li>
                 <!-- <li class="nav-item dropdown">
@@ -65,7 +65,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <a class="dropdown-item" href="gallery.html" title="">Gallery</a>
                   </div>
                 </li> -->
-                <li class="nav-item active">
+                <li>
                   <a class="nav-link text-uppercase" href="contact.html">Contacto</a></li>
               </ul>
               <!-- <div class="top-info text-left">
