--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   </div>
                 </li> -->
                 <li><a class="nav-link text-uppercase" href="servicios.html">Servicios</a></li>
-                <li><a class="nav-link text-uppercase" href="about.html">Impresion</a></li>
+                <li><a class="nav-link text-uppercase" href="impresion.html">Impresion</a></li>
                 <li class="nav-item active"><a class="nav-link text-uppercase" href="about.html">Nosotros</a></li>
                 <li><a class="nav-link text-uppercase" href="contact.html">Contacto</a></li>
               </ul>
