--- a/impresion.html
+++ b/impresion.html
@@ -8,7 +8,7 @@
 <html lang="zxx">
 
 <head>
-  <title>Genesys Informatica | Servicios</title>
+  <title>Genesys Informatica | Impresion</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <meta name="keywords" content="Casita a Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -23,9 +23,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     }
 
   </script>
-  <link rel="icon" href="./images/Logotipo Genesys Solo Abaco.png">
   <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
   <link href="css/style.css" rel='stylesheet' type='text/css' />
+  <link href="css/contact.css" rel='stylesheet' type='text/css' />
   <link href="css/fontawesome-all.css" rel="stylesheet">
   <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800" rel="stylesheet">
 </head>
@@ -52,8 +52,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <li><a class="nav-link text-uppercase" href="index.html">Home</a></li>
                 <li><a class="nav-link text-uppercase" href="hardware.html">Hardware</a></li>
                 <li><a class="nav-link text-uppercase" href="software.html">Software</a></li>
-                <li class="nav-item active"><a class="nav-link text-uppercase" href="servicios.html">Servicios</a></li>
-                <li><a class="nav-link text-uppercase" href="impresion.html">Impresion</a></li>
+                <li><a class="nav-link text-uppercase" href="servicios.html">Servicios</a></li>
+                <li class="nav-item active"><a class="nav-link text-uppercase" href="impresion.html">Impresion</a></li>
                 <li><a class="nav-link text-uppercase" href="about.html">Nosotros</a></li>
                 <!-- <li class="nav-item dropdown">
                   <a class="nav-link text-uppercase dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -85,110 +85,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- //header-top-->
   </section>
   <!-- //mian-content-->
-  <!-- /features -->
-  <section class="banner-bottom py-lg-5 py-md-5 py-3" id="feature">
+  <!-- /Contact-->
+  <section class="banner-bottom py-lg-5 py-md-5 py-3">
     <div class="container">
       <div class="inner-sec py-lg-5 py-3">
-        <h3 class="tittle text-center">Servicios</h3>
-        <div class="row mt-lg-5 mt-md-4 mt-4">
-          <div class="col-lg-4 about-in text-center">
-            <div class="card">
-              <div class="card-body">
-                <i class="fas fa-key mb-4"></i>
-                <h5 class="card-title">Asesoria de Preventa</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
-              </div>
-            </div>
 
-          </div>
-          <div class="col-lg-4 about-in text-center">
-            <div class="card">
-              <div class="card-body">
-                <i class="fas fa-building mb-4"></i>
-                <h5 class="card-title">Instalacion en Sitio</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="col-lg-4 about-in text-center">
-            <div class="card">
-              <div class="card-body">
-                <i class="fas fa-map-marker mb-4"></i>
-                <h5 class="card-title">Mantenimiento</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 about-in mt-lg-4 text-center">
-            <div class="card">
-              <div class="card-body">
-                <i class="fas fa-building mb-4"></i>
-                <h5 class="card-title">Migracion de Datos</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
-              </div>
-            </div>
-
-          </div>
-
-
-          <div class="col-lg-4 about-in mt-lg-4 text-center">
-            <div class="card">
-              <div class="card-body">
-                <i class="fas fa-map-marker mb-4"></i>
-                <h5 class="card-title">Cableado</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 about-in mt-lg-4 text-center">
-            <div class="card">
-              <div class="card-body">
-                <i class="fas fa-key mb-4"></i>
-                <h5 class="card-title">Atualizacion de Firmware y SO</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
-              </div>
-            </div>
-
-          </div>
-          <div class="col-lg-4 about-in mt-lg-4 text-center">
-            <div class="card">
-              <div class="card-body">
-                <i class="fas fa-map-marker mb-4"></i>
-                <h5 class="card-title">Soporte Tecnico</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 about-in mt-lg-4 text-center">
-            <div class="card">
-              <div class="card-body">
-                <i class="fas fa-key mb-4"></i>
-                <h5 class="card-title">Licenciamiento de Software</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
-              </div>
-            </div>
-
-          </div>
-          <div class="col-lg-4 about-in mt-lg-4 text-center">
-            <div class="card">
-              <div class="card-body">
-                <i class="fas fa-building mb-4"></i>
-                <h5 class="card-title">Seguridad</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
-              </div>
-            </div>
-
-          </div>
-        </div>
+        <h3 class="tittle text-center mb-md-5 mb-4">Impresion</h3>
 
       </div>
     </div>
   </section>
-  <!-- //features -->
+
   <!--/newsletter-->
   <footer class="newsletter_right pymd-5 py-4" id="footer">
     <div class="container">
@@ -240,7 +147,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       </div>
     </div>
   </footer>
-  <div class="copyright py-3">
+  <!-- <div class="copyright py-3">
     <div class="container">
       <div class="row">
         <div class="col-md-8">
@@ -258,8 +165,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!--//newsletter-->
+
   <!--model-forms-->
   <!--/Login-->
   <!-- <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-hidden="true">
@@ -413,13 +321,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   <script>
     $(document).ready(function () {
       /*
-                  var defaults = {
-                      containerID: 'toTop', // fading element id
-                    containerHoverID: 'toTopHover', // fading element hover id
-                    scrollSpeed: 1200,
-                    easingType: 'linear' 
-                   };
-                  */
+        var defaults = {
+            containerID: 'toTop', // fading element id
+          containerHoverID: 'toTopHover', // fading element hover id
+          scrollSpeed: 1200,
+          easingType: 'linear' 
+        };
+        */
 
       $().UItoTop({
         easingType: 'easeOutQuart'
