--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   </div>
                 </li> -->
                 <li><a class="nav-link text-uppercase" href="servicios.html">Servicios</a></li>
-                <li><a class="nav-link text-uppercase" href="about.html">Impresion</a></li>
+                <li><a class="nav-link text-uppercase" href="impresion.html">Impresion</a></li>
                 <li><a class="nav-link text-uppercase" href="about.html">Nosotros</a></li>
                 <li> <a class="nav-link text-uppercase" href="contact.html">Contacto</a></li>
               </ul>
