preview de instalaciones fisicas y otros cambios

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   <section class="clients py-md-5 py-3" id="clients">
     <div class="container">
       <div class="inner-sec py-md-5 py-3">
-        <h3 class="tittle text-center mb-md-5 mb-4">Nuestros Clientes</h3>
+        <!-- <h3 class="tittle text-center mb-md-5 mb-4">Nuestros Clientes</h3> -->
         <div class="owl-carousel owl-theme">
           <div class="item">
             <div class="feedback-info text-left">
@@ -285,8 +285,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   <section class="banner-bottom py-lg-5 py-md-5 py-3" id="services">
     <div class="container">
       <div class="inner-sec py-lg-5 py-3">
-        <h3 class="tittle text-center mb-md-5 mb-4">Work With Us</h3>
-        <div class="row middle-grids pt-lg-5">
+        <h3 class="tittle text-center mb-md-5 mb-4">Nuestros Clientes</h3>
+        <!-- 4 card section -->
+        <!-- <div class="row middle-grids pt-lg-5">
           <div class="col-lg-3 about-in middle-grid-info text-center">
             <div class="card">
               <div class="card-body">
@@ -328,7 +329,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
