--- a/servicios.html
+++ b/servicios.html
@@ -26,6 +26,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   <link rel="icon" href="./images/Logotipo Genesys Solo Abaco.png">
   <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
   <link href="css/style.css" rel='stylesheet' type='text/css' />
+  <link href="css/servicios.css" rel="stylesheet" type='text/css'>
   <link href="css/fontawesome-all.css" rel="stylesheet">
   <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800" rel="stylesheet">
 </head>
@@ -97,6 +98,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <i class="fas fa-key mb-4"></i>
                 <h5 class="card-title">Asesoria de Preventa</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
+                <a href="instalaciones.html" class="btn btn-primary mt-3 details-button">Detalles</a>
               </div>
             </div>
 
@@ -105,8 +107,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="card">
               <div class="card-body">
                 <i class="fas fa-building mb-4"></i>
-                <h5 class="card-title">Instalacion en Sitio</h5>
+                <h5 class="card-title">Instalaciones Fisicas en Sitio</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
+                <a href="instalaciones.html" class="btn btn-primary mt-3 details-button">Detalles</a>
               </div>
             </div>
 
@@ -118,6 +121,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <i class="fas fa-map-marker mb-4"></i>
                 <h5 class="card-title">Mantenimiento</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
+                <a href="instalaciones.html" class="btn btn-primary mt-3 details-button">Detalles</a>
               </div>
             </div>
           </div>
@@ -127,6 +131,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <i class="fas fa-building mb-4"></i>
                 <h5 class="card-title">Migracion de Datos</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
+                <a href="instalaciones.html" class="btn btn-primary mt-3 details-button">Detalles</a>
               </div>
             </div>
 
@@ -139,6 +144,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <i class="fas fa-map-marker mb-4"></i>
                 <h5 class="card-title">Cableado</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
+                <a href="instalaciones.html" class="btn btn-primary mt-3 details-button">Detalles</a>
               </div>
             </div>
           </div>
@@ -149,6 +155,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <i class="fas fa-key mb-4"></i>
                 <h5 class="card-title">Atualizacion de Firmware y SO</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
+                <a href="instalaciones.html" class="btn btn-primary mt-3 details-button">Detalles</a>
               </div>
             </div>
 
@@ -159,6 +166,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <i class="fas fa-map-marker mb-4"></i>
                 <h5 class="card-title">Soporte Tecnico</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
+                <a href="instalaciones.html" class="btn btn-primary mt-3 details-button">Detalles</a>
               </div>
             </div>
           </div>
@@ -169,6 +177,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <i class="fas fa-key mb-4"></i>
                 <h5 class="card-title">Licenciamiento de Software</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
+                <a href="instalaciones.html" class="btn btn-primary mt-3 details-button">Detalles</a>
               </div>
             </div>
 
@@ -179,6 +188,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <i class="fas fa-building mb-4"></i>
                 <h5 class="card-title">Seguridad</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
+                <a href="instalaciones.html" class="btn btn-primary mt-3 details-button">Detalles</a>
               </div>
             </div>
 
@@ -240,7 +250,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       </div>
     </div>
   </footer>
-  <div class="copyright py-3">
+  <!-- <div class="copyright py-3">
     <div class="container">
       <div class="row">
         <div class="col-md-8">
@@ -258,7 +268,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!--//newsletter-->
   <!--model-forms-->
   <!--/Login-->
