client logo section

--- a/index.html
+++ b/index.html
@@ -282,10 +282,55 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   </section>
   <!--//testimonials-->
   <!-- /services -->
-  <section class="banner-bottom py-lg-5 py-md-5 py-3" id="services">
+  <section class="banner-bottom py-lg-5 py-md-5 py-3" id="logos">
     <div class="container">
       <div class="inner-sec py-lg-5 py-3">
         <h3 class="tittle text-center mb-md-5 mb-4">Nuestros Clientes</h3>
+        <!-- flex logos de clientes -->
+        <div class="d-flex justify-content-around">
+          <div class="client-logo m-2">
+            <img class="m-3" src="https://lh3.googleusercontent.com/5Pw1_iWE7hZFiahj0lH8ccX6ROpwKafN2AbfcP0E3edacHlTAEiWqxilhT52TdCQcw6Gv9BHEnT4Unz9ZspaJOJWEBYlKdX9ckigVVa8-Nldkb0R2NfhdrYVvtL3SLZi4ekSXccPH2w=w2400"
+              alt="Home Depot">
+            <img class="m-3" src="https://lh3.googleusercontent.com/lXfvSsseFhbnrvwV-oNczOBRN3Ngx_xvk1WzkGtbSrQN7nUqcIusME7EPKNEwwQ7ADKHusDYDOo2Noj4EgEGzjT4ph1KBN8Ai1wO4DbHbwjv5sziotqG5zd3r-UagC7GM4834DWhPlk=w2400"
+              alt="Lala">
+            <img class="m-3" src="https://lh3.googleusercontent.com/YEt6Db_VCe6FngMvowVSZt8cIbbaFbA6bHQtNQfFafil-tg8b1-Ke0ZdPQWSZzrlnFMQ9HJt9D-NjIGmXtJduHADrmLn-2lAFDrE6Ig3EgEIPQfwCZ9ZA7Yf05XmGKQK_FCVovfBzZE=w2400"
+              alt="Cerrey">
+            <img class="m-3" src="https://lh3.googleusercontent.com/fQGrGYk2FsBbmYUs3pE4DQS3QuhMmqzKavpKoTBSXJVkUoOimcU1dnES2yI3G8wq2F5HH7dOJNBZOvipaoL0DGOlCw1wQ_t0y84y2dDbX-tRjduargHPJlOS6pDA3AeU2jhdOv35Qlw=w2400"
+              alt="Allen">
+            <img class="m-3" src="https://lh3.googleusercontent.com/aTgoLealP7t_aJ7LQyvSWKMOCPViVYnMrI4HqqCL_tSiV_Cij0I4pcfgFc4g5krfj8Pzrw9mIJsapN6bLtuqM51g1YJs2w_ww69QlhhxugCKpqq5BBBkhsQVmWaA2ZDBWrrwM_uHECo=w2400"
+              alt="Marcatel">
+          </div>
+        </div>
+
+        <div class="d-flex justify-content-around">
+          <div class="client-logo m-2">
+            <img class="m-3" src="https://lh3.googleusercontent.com/2cjIfs4ujaPTdCpPsOhDfODBKEoZrD9DX1E5cHr5Thyonlbnw5RNENkMKcUqOC8N3GIfTsTKOxjbruJy_T-6jOsEbZ5i7wkA59xzHAyacmjrRJKEHHu4Gv4HmlFthAaeuGOm8u7WQpk=s283-p-k"
+              alt="Metalsa">
+            <img class="m-3" src="https://lh3.googleusercontent.com/SU_T8qRd7M6GPR5a5dI08kyFKOgvwJMFlV010-tzZNcUeIvAb2eiWVaQwtOAE1Kmmk__ZPD2U6-wXC3fPKqg_82_iAEv1MvBfI3e__xgLKQjdJEwVhNYE6vEnW2ZTNDksWD9OihzMc8=w2400"
+              alt="Soriana">
+            <img class="m-3" src="https://lh3.googleusercontent.com/ZSa5ONGXvPiR8EIHHf1vB0ntjIxYm9Rer2Wy9Jjs49E6Go9e3TNlEmlv_iozsH4J_khGLgNZiFwLTwFZrgs4I4nUh7zGBUrF29fgVV5cG0jSA3RP4Ns0oTmYkg5hBH3qRYSwmsfnA_0=w2400"
+              alt="Axtel">
+            <img class="m-3" src="https://lh3.googleusercontent.com/H64xdgTyDhAOtYKo-UFMx_4GfNVpPdviR1LAVNgaXPJXpoYJxJmBubsr5Df_acxxRhJpHo_YIO5ov-pKFnw1nOPXhD8c1wBXvuogpEzXyT8cBrPEELgQ1y5zRMkrcNOnYnLNvc8MAo8=s227-p-k"
+              alt="Farmacias del Ahorro">
+            <img class="m-3" src="https://lh3.googleusercontent.com/-gCWAqzVjWFR5-lz9IGbyN3At2NG-jqyQvLvIcKZgeIS_Qf7CyX1DG4k84eFNUJkR4povjlo2TOJ5SxoVyfVRUWJL8AXT-S47p4hFeAPE8O8EnjB_fQKyC-32oVgbufkmy_jJXMMkQY=w2400"
+              alt="Ternium">
+          </div>
+        </div>
+
+        <div class="d-flex justify-content-around">
+          <div class="client-logo m-2">
+            <img class="m-3" src="https://lh3.googleusercontent.com/HmJgZ-UjoBQF-QuNNcVrZnHl0n8f2uqaSVMGc8xvGAHg1qLl-e9iRb75sqXgwfmbjCfcXkK0QzdEMhNw_1HsCiEsUh_unxrhfuBOHDEcbOqm_bjyHvNBI2QbU4j04thOdQPbhaSQRfo=s229-p-k"
+              alt="Interfactura">
+            <img class="m-3" src="https://lh3.googleusercontent.com/zu6Ph6CV-aqBER0FuY4eX52h56Xz37xu1taEQX9vvSYWk9xqLWTS5e335aDdShiEkNyfI9KyZlLS5O912LH4ZVEg9ZjGtl9O7y9usF5lJMxm3a2xtwt0TRBo5RdxtpaIf7vMqAcWUMc=w2400"
+              alt="Cuprum">
+            <img class="m-3" src="https://lh3.googleusercontent.com/je2nKsAj-S9TLNujmgqVTlrTneBnI23viib1WzkGoA0r-vTZhw_eNBHEkaN-cEFM2Js0f1rf6RP4E3culFir6cWUlpDnMx_AFANy69bJHDVuIgJqW3bOg_FfGu3Yp_mzTvyuRT1NZFA=w2400"
+              alt="Key">
+            <img class="m-3" src="https://lh3.googleusercontent.com/xULUCRnZxQfTPXyulyZx8LRD1fcyoDHlsM9IvHpGABG3xIyn8ypmwAxrfuBQ7KO9GwD6pGo2Z2P0s11Fwq9JMgdBCTX3aglqZte5x6PsmwV_SZNffR4PwgwOalWM5UsiJuoz2GLgCY8=w2400"
+              alt="Caterpilar">
+            <img class="m-3" src="https://lh3.googleusercontent.com/3ky2eaWxwTmrIJxlTH8zfT0B72pseL5W8-0ytAw-ZppGtuLWSG-j70asnEME2YxmxnYLJRraxVo5Vr-9bD47RgGiri3rU2J3LGZVsGj8iDG1JHKjhRH6wR5ZzHegJmpoxBhplk7lAkk=w2400"
+              alt="Tyson">
+          </div>
+        </div>
         <!-- 4 card section -->
         <!-- <div class="row middle-grids pt-lg-5">
           <div class="col-lg-3 about-in middle-grid-info text-center">
