link a servicios desde sseccion de index

--- a/index.html
+++ b/index.html
@@ -385,12 +385,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <div class="row inner_w3l_agile_grids-1 ">
         <div class="col-lg-7 w3layouts_choose_left_grid1">
           <div class="choose_top">
-            <h3 class="w3l_header text-white">Still Have Questions?</h3>
-            <h4 class="mb-3 mt-3 text-white">Feel Free to Contact Our Agents Directly</h4>
-            <p class="text-white">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
+            <h3 class="w3l_header text-white">Tienes alguna pregunta?</h3>
+            <!-- <h4 class="mb-3 mt-3 text-white">Feel Free to Contact Our Agents Directly</h4> -->
+            <h4 class="mb-3 mt-3 text-white">Contacta a Nuestros Asesores Tecnicos</h4>
+            <!-- <p class="text-white">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
               at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum in,
-              egestas vestibulum tellus.</p>
-            <a href="#" class="btn btn-primary mt-3" data-toggle="modal" data-target="#myModal">Read More</a>
+              egestas vestibulum tellus.</p> -->
+            <p class="text-white">
+              Conoce toda la variedad de productos y servicios tecnologicos que ofrecemos. Nulla pellentesque mi non
+              laoreet eleifend. Integer porttitor mollisar lorem,
+              at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum in,
+              egestas vestibulum tellus.
+            </p>
+            <a href="servicios.html" class="btn btn-primary mt-3">Servicios</a>
           </div>
         </div>
       </div>
