--- a/impresion.html
+++ b/impresion.html
@@ -23,9 +23,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     }
 
   </script>
+  <link rel="icon" href="./images/Logotipo Genesys Solo Abaco.png">
   <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
   <link href="css/style.css" rel='stylesheet' type='text/css' />
-  <link href="css/contact.css" rel='stylesheet' type='text/css' />
+  <link href="css/impresion.css" rel='stylesheet' type='text/css' />
+  <link href="css/instalaciones.css" rel='stylesheet' type='text/css' />
   <link href="css/fontawesome-all.css" rel="stylesheet">
   <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800" rel="stylesheet">
 </head>
@@ -85,17 +87,152 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- //header-top-->
   </section>
   <!-- //mian-content-->
-  <!-- /Contact-->
+  <!-- /Impresion-->
   <section class="banner-bottom py-lg-5 py-md-5 py-3">
     <div class="container">
       <div class="inner-sec py-lg-5 py-3">
 
         <h3 class="tittle text-center mb-md-5 mb-4">Impresion</h3>
 
+        <div class="row middle-grids pt-lg-5">
+          <div class="col-lg-6 advantage-grid-info pt-md-3">
+            <div class="advantage_left">
+              <!-- <h4 class="mb-2">SAI</h4> -->
+              <h3>Servicios Administrados de Impresion</h3>
+              <p class="mt-2">
+                Con nuestros servicios administrados de impresion deja en nuestras manos la instalacion y mantenimiento
+                de todas las impresoras. Deja que nuestros expertos gestionen la impresion y disfruta de beneficios
+                como reduccion de costos en papel, tonner y procesos administrativos con una simple cuota mensual.
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-6 advantage-grid-info1">
+            <div class="advantage_left1 text-center">
+              <img src="https://lh3.googleusercontent.com/7Da9Nqq2DiNDxFaf1bKMZdm_etIHS5dD5x4_MHr30PoD5yzummWPjXrE8c378MYBEEKJSOUF5i1oNQ8rT8TgoEHzoWXNvu6VGlZGlNTmLCHGqFzEJecVQaEDoA4rIS-SY-x4G4Pex2E=w2400"
+                class="img-fluid" alt="impresoras">
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
 
+  <hr>
+
+  <section class="banner-bottom py-lg-5 py-md-5" id="services">
+    <div class="container">
+      <div class="inner-secs">
+        <!-- <h3 class="tittle text-center mb-md-5 mb-4"></h3> -->
+
+        <!-- SAI -->
+        <div class="row middle-grids pt-lg-5">
+          <div class="col-lg-8 advantage-grid-info">
+            <div class="advantage_left">
+              <h4 class="mb-2">SAI</h4>
+              <h3 class="mb-2">Ventajas y Beneficios</h3>
+              <!-- <p class="mt-2">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
+                  at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum
+                  in, egestas vestibulum tellus.</p> -->
+
+
+              <ul class="instalaciones-servicios-ul">
+                <li><b>Beneficios economicos: </b> ayudan a ahorrar hasta en un 30% en el costo total de los
+                  egresos utilizados en procesos relacionados con documentos, por ejemplo, papel, tinta, servicio,
+                  electricidad y gastos en TI.</li>
+                <li><b>Beneficios ambientales: </b>brindan soluciones útiles para reducir el consumo de papel, el uso
+                  de la electricidad, y minimizar la cantidad de desperdicios. Los productos Lexmark reducen en un 9%
+                  el consumo de energía en su vida útil, y produce un 10% menos de gases de efecto invernadero.</li>
+                <li><b>Tiempos organizacionales: </b>resultan una mejora en la eficiencia, productividad y tiempo de
+                  procesos de trabajo.</li>
+                <li><b>Conectividad: </b>los usuarios pueden imprimir en cualquier equipo desde dispositivos móviles
+                  como SmartPhones, Tablets o laptops sin importar de dónde hayan enviado el documento.</li>
+                <li><b>Seguridad: </b>mantener la información completamente segura y confidencial. Se puede controlar
+                  y supervisar el uso y los dispositivos, establecer reglas de impresión con el grupo de trabajo,
+                  aplicar fuertes medidas de seguridad, realizar seguimientos, y almacenar datos en la nube.</li>
+              </ul>
+
+
+            </div>
+
+
+          </div>
+          <div class="col-lg-4 advantage-grid-info1">
+            <div class="advantage_left1 text-center">
+              <img src="images/DataCenter1.jpg" class="img-fluid" alt="
+                Data-Center1">
+            </div>
+          </div>
+        </div>
+
+        <!-- Marcas de Impresoras -->
+        <div class="row middle-grids pt-lg-5">
+          <div class="col-lg-6 advantage-grid-info1">
+            <div class="advantage_left1 text-center">
+              <img src="images/Cableado1.jpg" class="img-fluid" alt="cableado de ethernet y fibras">
+            </div>
+          </div>
+          <div class="col-lg-6 advantage-grid-info pt-md-5 px-md-5">
+            <div class="advantage_left">
+              <h4 class="mb-2">Impresoras</h4>
+              <h3>Marcas</h3>
+              <ul class="instalaciones-servicios-ul">
+                <li>Lexmark</li>
+                <li>Brother</li>
+                <li>Samsung</li>
+                <li>Epson</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <!-- Software de Monitoreo -->
+        <div class="row middle-grids pt-lg-5">
+          <div class="col-lg-6 advantage-grid-info pt-md-5">
+            <div class="advantage_left">
+              <h4 class="mb-2">Software</h4>
+              <h3 class="mb-2">Control y Monitoreo de Impresiones</h3>
+
+              <ul class="instalaciones-servicios-ul">
+                <li>PaperCut</b></li>
+                <li>Lexmark Print Management</li>
+                <li>Lexmark Markvision Enterprise</li>
+                <li>3manager</li>
+              </ul>
+
+            </div>
+          </div>
+          <div class="col-lg-6 advantage-grid-info1">
+            <div class="advantage_left1 text-center">
+              <img src="images/AC.jpg" class="img-fluid" alt="
+                Data-Center1">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <hr>
+
+  <section class="banner-bottom py-lg-5 py-md-5 py-3" id="logos">
+    <div class="container">
+      <div class="inner-sec py-lg-5 py-3">
+        <h3 class="tittle text-center mb-md-5 mb-4">Nuestros Clientes</h3>
+        <!-- flex logos de clientes -->
+        <div class="d-flex justify-content-around">
+          <div class="client-logo m-2">
+            <img class="m-3" src="images/Embraco.png" alt="Embraco">
+            <img class="m-3" src="images/Grainger.png" alt="Grainger">
+            <img class="m-3" src="images/larmex.jpg" alt="Larmex">
+            <img class="m-3" src="images/coavis.jpg" alt="Coavis">
+            <img class="m-3" src="images/Carza.jpg" alt="Carza">
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
   <!--/newsletter-->
   <footer class="newsletter_right pymd-5 py-4" id="footer">
     <div class="container">
