--- a/Infraestructura.html
+++ b/Infraestructura.html
@@ -8,7 +8,7 @@
 <html lang="zxx">
 
 <head>
-  <title>Genesys Informatica | Hardware</title>
+  <title>Genesys Informatica | Infraestructura</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <meta name="keywords" content="Casita a Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -23,6 +23,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     }
 
   </script>
+  <link rel="icon" href="./images/Logotipo Genesys Solo Abaco.png">
   <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
   <link href="css/style.css" rel='stylesheet' type='text/css' />
   <link href="css/contact.css" rel='stylesheet' type='text/css' />
@@ -50,23 +51,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <ul class="navbar-nav">
 
                 <li><a class="nav-link text-uppercase" href="index.html">Home</a></li>
-                <li class="nav-item active"><a class="nav-link text-uppercase" href="hardware.html">Hardware</a></li>
-                <li><a class="nav-link text-uppercase" href="software.html">Software</a></li>
-                <li><a class="nav-link text-uppercase" href="servicios.html">Servicios</a></li>
-                <li><a class="nav-link text-uppercase" href="impresion.html">Impresion</a></li>
-                <li><a class="nav-link text-uppercase" href="about.html">Nosotros</a></li>
-                <!-- <li class="nav-item dropdown">
-                  <a class="nav-link text-uppercase dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Pages <i class="fas fa-caret-down"></i>
+                <li class="nav-item active"><a class="nav-link text-uppercase" href="Infraestructura.html">Infraestructura</a></li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link text-uppercase dropdown-toggle" href="servicios.html" id="navbarDropdown" role="button"
+                    aria-haspopup="true" aria-expanded="false">
+                    Servicios <i class="fas fa-caret-down"></i>
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="services.html">Services</a>
-                    <a class="dropdown-item" href="gallery.html" title="">Gallery</a>
+                    <a class="dropdown-item" href="impresion.html">Impresion</a>
+                    <a class="dropdown-item" href="instalaciones.html">Instalaciones Fisicas</a>
                   </div>
-                </li> -->
+                </li>
                 <li>
-                  <a class="nav-link text-uppercase" href="contact.html">Contacto</a></li>
+                <li><a class="nav-link text-uppercase" href="about.html">Nosotros</a></li>
+                <a class="nav-link text-uppercase" href="contact.html">Contacto</a></li>
               </ul>
               <!-- <div class="top-info text-left">
                 <ul>
@@ -90,7 +88,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="container">
       <div class="inner-sec py-lg-5 py-3">
 
-        <h3 class="tittle text-center mb-md-5 mb-4">Hardware</h3>
+        <h3 class="tittle text-center mb-md-5 mb-4">Infraestructura</h3>
 
       </div>
     </div>
