--- a/about.html
+++ b/about.html
@@ -53,20 +53,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <li class="nav-item">
                   <a class="nav-link text-uppercase" href="index.html">Home</a>
                 </li>
-                <li><a class="nav-link text-uppercase" href="hardware.html">Hardware</a></li>
-                <li><a class="nav-link text-uppercase" href="software.html">Software</a></li>
-                <!-- <li class="nav-item dropdown">
-                  <a class="nav-link text-uppercase dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <li><a class="nav-link text-uppercase" href="Infraestructura.html">Infraestructura</a></li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link text-uppercase dropdown-toggle" href="servicios.html" id="navbarDropdown" role="button"
+                    aria-haspopup="true" aria-expanded="false">
                     Servicios <i class="fas fa-caret-down"></i>
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="services.html">VMware</a>
-                    <a class="dropdown-item" href="gallery.html" title="">AIX</a>
+                    <a class="dropdown-item" href="impresion.html">Impresion</a>
+                    <a class="dropdown-item" href="instalaciones.html" title="">Instalaciones Fisicas</a>
                   </div>
-                </li> -->
-                <li><a class="nav-link text-uppercase" href="servicios.html">Servicios</a></li>
-                <li><a class="nav-link text-uppercase" href="impresion.html">Impresion</a></li>
+                </li>
                 <li class="nav-item active"><a class="nav-link text-uppercase" href="about.html">Nosotros</a></li>
                 <li><a class="nav-link text-uppercase" href="contact.html">Contacto</a></li>
               </ul>
