--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     }
 
   </script>
+  <link rel="icon" href="./images/Logotipo Genesys Solo Abaco.png">
   <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
   <link href="css/style.css" rel='stylesheet' type='text/css' />
   <link href="css/contact.css" rel='stylesheet' type='text/css' />
@@ -50,23 +51,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <ul class="navbar-nav">
 
                 <li><a class="nav-link text-uppercase" href="index.html">Home</a></li>
-                <li><a class="nav-link text-uppercase" href="hardware.html">Hardware</a></li>
-                <li><a class="nav-link text-uppercase" href="software.html">Software</a></li>
-                <li><a class="nav-link text-uppercase" href="servicios.html">Servicios</a></li>
-                <li><a class="nav-link text-uppercase" href="impresion.html">Impresion</a></li>
-                <li><a class="nav-link text-uppercase" href="about.html">Nosotros</a></li>
-                <!-- <li class="nav-item dropdown">
-                  <a class="nav-link text-uppercase dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Pages <i class="fas fa-caret-down"></i>
+                <li><a class="nav-link text-uppercase" href="Infraestructura.html">Infraestructura</a></li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link text-uppercase dropdown-toggle" href="servicios.html" id="navbarDropdown" role="button"
+                    aria-haspopup="true" aria-expanded="false">
+                    Servicios <i class="fas fa-caret-down"></i>
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="services.html">Services</a>
-                    <a class="dropdown-item" href="gallery.html" title="">Gallery</a>
+                    <a class="dropdown-item" href="impresion.html">Impresion</a>
+                    <a class="dropdown-item" href="instalaciones.html" title="">Instalaciones Fisicas</a>
                   </div>
-                </li> -->
+                </li>
+                <li><a class="nav-link text-uppercase" href="about.html">Nosotros</a></li>
                 <li class="nav-item active">
-                  <a class="nav-link text-uppercase" href="contact.html">Contacto</a></li>
+                  <a class="nav-link text-uppercase" href="contact.html">Contacto</a>
+                </li>
               </ul>
               <!-- <div class="top-info text-left">
                 <ul>
@@ -105,7 +104,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </p>
               </div>
             </div>
-
           </div>
           <div class="col-lg-4 address-grid">
             <div class="row address-info">
@@ -116,10 +114,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <h6>Email</h6>
                 <p>Email :
                   <a href="mailto:example@email.com"> mail@example.com</a>
-
                 </p>
               </div>
-
             </div>
           </div>
           <div class="col-lg-4 address-grid">
@@ -130,9 +126,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <div class="col-md-9 address-right text-left">
                 <h6>Telefono</h6>
                 <p>+1 81 8347 7640</p>
-
               </div>
-
             </div>
           </div>
         </div>
