--- a/impresion.html
+++ b/impresion.html
@@ -40,7 +40,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <div class="container">
         <header class="mainheader py-3">
           <nav class="navbar navbar-expand-lg navbar-light bg-light RWDpagescrollfix">
-            <!-- <h1><a class="navbar-brand" href="index.html">Casita</a></h1> -->
             <a href="index.html">
               <img src="./images/Logotipo Genesys Horizontal.png" alt="Logo Genesys Informatica" height="55">
             </a>
@@ -52,23 +51,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <ul class="navbar-nav">
 
                 <li><a class="nav-link text-uppercase" href="index.html">Home</a></li>
-                <li><a class="nav-link text-uppercase" href="hardware.html">Hardware</a></li>
-                <li><a class="nav-link text-uppercase" href="software.html">Software</a></li>
-                <li><a class="nav-link text-uppercase" href="servicios.html">Servicios</a></li>
-                <li class="nav-item active"><a class="nav-link text-uppercase" href="impresion.html">Impresion</a></li>
-                <li><a class="nav-link text-uppercase" href="about.html">Nosotros</a></li>
-                <!-- <li class="nav-item dropdown">
+                <li><a class="nav-link text-uppercase" href="infraestructura.html">Infraestructura</a></li>
+                <li class="nav-item dropdown active">
                   <a class="nav-link text-uppercase dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Pages <i class="fas fa-caret-down"></i>
+                    aria-haspopup="true" aria-expanded="false">
+                    Servicios <i class="fas fa-caret-down"></i>
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="services.html">Services</a>
-                    <a class="dropdown-item" href="gallery.html" title="">Gallery</a>
+                    <a class="dropdown-item" href="impresion.html">Impresion</a>
+                    <a class="dropdown-item" href="instalaciones.html" title="">Instalaciones Fisicas</a>
                   </div>
-                </li> -->
+                </li>
+                <li><a class="nav-link text-uppercase" href="about.html">Nosotros</a></li>
                 <li>
-                  <a class="nav-link text-uppercase" href="contact.html">Contacto</a></li>
+                  <a class="nav-link text-uppercase" href="contact.html">Contacto</a>
+                </li>
               </ul>
               <!-- <div class="top-info text-left">
                 <ul>
