--- a/instalaciones.html
+++ b/instalaciones.html
@@ -51,21 +51,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <ul class="navbar-nav">
 
                 <li><a class="nav-link text-uppercase" href="index.html">Home</a></li>
-                <li><a class="nav-link text-uppercase" href="hardware.html">Hardware</a></li>
-                <li><a class="nav-link text-uppercase" href="software.html">Software</a></li>
-                <li class="nav-item active"><a class="nav-link text-uppercase" href="servicios.html">Servicios</a></li>
-                <li><a class="nav-link text-uppercase" href="impresion.html">Impresion</a></li>
-                <li><a class="nav-link text-uppercase" href="about.html">Nosotros</a></li>
-                <!-- <li class="nav-item dropdown">
+                <li><a class="nav-link text-uppercase" href="infraestructura.html">Infraestructura</a></li>
+                <li class="nav-item dropdown active">
                   <a class="nav-link text-uppercase dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Pages <i class="fas fa-caret-down"></i>
+                    aria-haspopup="true" aria-expanded="false">
+                    Servicios <i class="fas fa-caret-down"></i>
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="services.html">Services</a>
-                    <a class="dropdown-item" href="gallery.html" title="">Gallery</a>
+                    <a class="dropdown-item" href="impresion.html">Impresion</a>
+                    <a class="dropdown-item" href="instalaciones.html" title="">Instalaciones Fisicas</a>
                   </div>
-                </li> -->
+                </li>
+                <li><a class="nav-link text-uppercase" href="about.html">Nosotros</a></li>
                 <li>
                   <a class="nav-link text-uppercase" href="contact.html">Contacto</a></li>
               </ul>
