--- a/Infraestructura.html
+++ b/Infraestructura.html
@@ -62,9 +62,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <a class="dropdown-item" href="instalaciones.html">Instalaciones Fisicas</a>
                   </div>
                 </li>
-                <li>
                 <li><a class="nav-link text-uppercase" href="about.html">Nosotros</a></li>
-                <a class="nav-link text-uppercase" href="contact.html">Contacto</a></li>
+                <li><a class="nav-link text-uppercase" href="contact.html">Contacto</a></li>
               </ul>
               <!-- <div class="top-info text-left">
                 <ul>
