--- a/Infraestructura.html
+++ b/Infraestructura.html
@@ -51,7 +51,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <ul class="navbar-nav">
 
                 <li><a class="nav-link text-uppercase" href="index.html">Home</a></li>
-                <li class="nav-item active"><a class="nav-link text-uppercase" href="Infraestructura.html">Infraestructura</a></li>
+                <li class="nav-item active"><a class="nav-link text-uppercase" href="infraestructura.html">Infraestructura</a></li>
                 <li class="nav-item dropdown">
                   <a class="nav-link text-uppercase dropdown-toggle" href="servicios.html" id="navbarDropdown" role="button"
                     aria-haspopup="true" aria-expanded="false">
