--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <li class="nav-item">
                   <a class="nav-link text-uppercase" href="index.html">Home</a>
                 </li>
-                <li><a class="nav-link text-uppercase" href="Infraestructura.html">Infraestructura</a></li>
+                <li><a class="nav-link text-uppercase" href="infraestructura.html">Infraestructura</a></li>
                 <li class="nav-item dropdown">
                   <a class="nav-link text-uppercase dropdown-toggle" href="servicios.html" id="navbarDropdown" role="button"
                     aria-haspopup="true" aria-expanded="false">
